# CodeJaguar

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: publish.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: budget.py  provider_errors.py  provider_manager.py  validators.py
backend/app/api/: routes.py
backend/app/architecture/: prompts.py  service.py
backend/app/memory/: service.py
backend/app/providers/: anthropic.py  base.py  deepseek.py  gemini.py  generic.py  openai.py
backend/app/review/: prompts.py  service.py
backend/app/rules/: service.py
backend/app/security/: actions.py  compose.py  dependency.py  dockerfile.py  env.py  gitignore.py  prompts.py  secrets.py  service.py
backend/app/summary/: prompts.py  service.py
cli/: claude.md  package-lock.json  package.json
cli/src/: index.ts
cli/src/commands/: architecture.ts  auth.ts  memory.ts  protect.ts  review.ts  rules.ts  security.ts  setup.ts  summary.ts
cli/src/providers/: keychain.ts
cli/src/services/: backend-runner.ts  backend.ts  config.ts  consensus.ts  context.ts  git.ts  output.ts  provider.ts  secrets.ts  setup.ts  update.ts
cli/src/types/: config.ts  provider.ts  review.ts  security.ts
cli/src/utils/: errors.ts  loader.ts  logger.ts  splash.ts
docs/: advanced.md  commands.md  getting-started.md  providers.md
ui/: .gitignore  eslint.config.mjs  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: CommandBlock.tsx  FeatureGrid.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  InstallTabs.tsx  (+7 more)
(+24 files in other folders)
