[project]
name = "codejaguar-backend"
version = "0.1.0"
description = "Local AI Code Review and DevSecOps backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
jaguar-backend = "main:app"
